--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   </header>
 
   <!-- Start modal section -->
-  <div class="signup-modal-wrapper">
+  <div class="signup-modal-wrapper" id="signup-modal">
     <div class="modal">
-      <div>
+      <div id="close-modal">
         <i class="fa fa-2x fa-times"></i>
       </div>
       <div id="signup-form">
